2003-06-22  Bruno Haible  <bruno@clisp.org>

	* write-properties.c: Don't include exit.h and gettext.h.

2003-06-22  Bruno Haible  <bruno@clisp.org>

	* x-php.c (phase3_ungetc): Comment out unused function.

2003-06-21  Bruno Haible  <bruno@clisp.org>

	* format-perl.c: Complete rewrite.
	* format-perl-bracket.c: New file.
	* message.h (format_perl_bracket): New enum value.
	(NFORMATS): Increment.
	* format.h (formatstring_perl_bracket): New declaration.
	* format.c (formatstring_parsers): Add entry for perl_bracket.
	* message.c (format_language, format_language_pretty): Likewise.
	* x-perl.h (SCANNERS_PERL): Use formatstring_perl and
	formatstring_perl_bracket.
	* Makefile.am (FORMAT_SOURCE): Add format-perl-bracket.c.
	* Makefile.msvc (OBJECTS): Add format-perl.obj,format-perl-bracket.obj.
	(xgettext_OBJECTS): Add x-perl.obj.
	(format-perl.obj, format-perl-bracket.obj, x-perl.obj): New rules.
	* Makefile.vms (OBJECTS): Add format-perl.obj, format-perl-bracket.obj.
	(xgettext_OBJECTS): Add x-perl.obj.
	(format-perl.obj, format-perl-bracket.obj, x-perl.obj): New rules.

	* x-perl.c (extract_quotelike_pass3): Don't give an invalid
	interpolation error for a backslashed dollar sign.

2003-06-21  Bruno Haible  <bruno@clisp.org>

	* x-perl.c (extract_quotelike_pass3): Fix handling of double backslash.

2003-06-19  Bruno Haible  <bruno@clisp.org>

	* x-perl.c (enum string_type_ty): Remove trailing comma.
	(interpolate_keywords::enum parser_state): Likewise.
	(extract_quotelike_pass3): Cast first argument of u8_uctomb().

2003-06-15  Bruno Haible  <bruno@clisp.org>

	* x-awk.c: Reorder definitions.
	* x-c.c: Reorder definitions.
	* x-perl.c: Reorder definitions.
	* x-php.c: Reorder definitions.
	* x-python.c: Reorder definitions.
	* x-smalltalk.c: Reorder definitions.
	* x-ycp.c: Reorder definitions.

2003-06-15  Bruno Haible  <bruno@clisp.org>

	* x-perl.c (struct stack_entry): Remove type.
	(struct stack): Remove type.
	(struct token_stack_ty): New type.