@@ -1,3 +1,8 @@
+2003-06-23  Bruno Haible  <bruno@clisp.org>
+
+	* format-perl-bracket.c (format_check): Allow additional bracketed
+	items in the msgstr.
+
 2003-06-22  Bruno Haible  <bruno@clisp.org>
 
 	* write-properties.c: Don't include exit.h and gettext.h.
